objects/PMC_CPQ_CadenceItem__c.object
<CustomObject>
    <description>Custom object to store weekly availability of products.</description>
    <fields>
        <fullName>PMC_CPQ_Cadence__c</fullName>
        <label>Cadence</label>
        <referenceTo>PMC_CPQ_Cadence__c</referenceTo>
        <relationshipLabel>Cadence Items</relationshipLabel>
        <relationshipName>Cadence_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ConfirmedDate__c</fullName>
        <description>Capture the date received from SAP for weekly product data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Forecasted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ConfirmedQuantity__c</fullName>
        <description>Capture quantity received from SAP for weekly product data.</description>
        <label>Forecasted Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cadence Item</label>
    <nameField>
        <displayFormat>CI-{0000}</displayFormat>
        <label>Cadence Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadence Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>